tests/baselines/reference/collisionCodeGenModuleWithAccessorChildren.errors.txt
tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts(5,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts(14,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts(24,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts(32,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts(41,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/collisionCodeGenModuleWithAccessorChildren.ts (5 errors) ====
    module M {
        export var x = 3;
        class c {
            private y;
            set Z(M) {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                this.y = x;
            }
        }
    }
    
    module M {
        class d {
            private y;
            set Z(p) {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                var M = 10;
                this.y = x;
            }
        }
    }
    
    module M { // Shouldnt be _M
        class e {
            private y;
            set M(p) {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                this.y = x;
            }
        }
    }
    
    module M {
        class f {
            get Z() {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                var M = 10;
                return x;
            }
        }
    }
    
    module M { // Shouldnt be _M
        class e {
            get M() {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                return x;
            }
        }
    }